@@ -1,3 +1,8 @@
+2020-02-10  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ball/maven/plugins/artifact/AbstractArtifactMojo.java:
+	Removed unused @Parameter fields.
+
 2020-02-09  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Started development of 3.1-SNAPSHOT.
